# nadi-gui

./: Cargo.toml  PKGBUILD  README.md  build.rs  nadi.desktop  ohio-gages.tasks  org.zerosofts.NadiGui.desktop  routing.network  routing.tasks
resources/: resources.gresource.xml  window.ui
src/: colors.rs  main.rs  network.rs  tokens.rs
src/window/: imp.rs  mod.rs
